--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
     "bcrypt": "^1.0.3",
-    "exif-js": "^2.3.0",
+    "dist-exiftool": "^10.53.0",
     "meteor-node-stubs": "^0.3.2",
-    "s3-ls": "^2.0.1"
+    "request-promise": "^4.2.2",
+    "s3-ls": "^2.0.1",
+    "simple-exiftool": "^1.1.0"
   }
 }
