--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,14 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "lint": "eslint .",
+    "jslint": "eslint .",
+    "csslint": "stylelint \"**/*.css, !**/*.min.css\"",
+    "lint": "eslint . && stylelint \"**/*.css, !**/*/min.css\"",
     "pretest": "npm run lint --silent"
+  },
+  "stylelint": {
+    "default-severity": "warning",
+    "extends": "stylelint-config-standard"
   },
   "eslintConfig": {
     "extends": "@meteorjs/eslint-config-meteor",
@@ -28,6 +34,7 @@
     "bcrypt": "^1.0.3",
     "dist-exiftool": "^10.53.0",
     "meteor-node-stubs": "^0.3.2",
+    "npm": "^5.8.0",
     "request-promise": "^4.2.2",
     "s3-ls": "^2.0.1",
     "simple-exiftool": "^1.1.0",
@@ -43,6 +50,8 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-meteor": "^4.2.0",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0"
   }
 }
